@startuml
skinparam classAttributeIconSize 0



CuerpoDeAgua -up-|> ObjetoGeografico
DensidadPoblacional -up|> ObjetoGeografico
LectorController x...> "datos ingresados" CuerpoDeAgua
ObjetoGeografico x...> "cuerpo" CuerpoDeAgua
PoblacionController -* LectorController
LectorController -* App

title __Class Diagram__\n


    class App {
        {static} + main()
        + start()
    }

  


    class CuerpoDeAgua {
        - dPoblacional : int
        - idCuerpoAgua : int
        - irca : double
        - municipio : String
        - nombreCuerpoAgua : String
        - tipoAgua : String
        - tipoCuerpo : String
        + CuerpoDeAgua()
        + consultarDatos() : String[]
        + getDPoblacional() : int
        + getIdCuerpoAgua() : int
        + getIrca() : double
        + getMunicipio() : String
        + getNombreCuerpoAgua() : String
        + getTipoAgua() : String
        + getTipoCuerpo() : String
        + guardarDatos(nombreCuerpoAgua : String, idCuerpoAgua : int, municipio : String, tipoAgua : String, tipoCuerpo : String, irca : double, dPoblacional : int) : void
        + nivel(nivelIRCA : double) : String
        + setDPoblacional(dPoblacional : int) : void
        + setIdCuerpoAgua(idCuerpoAgua : int) : void
        + setIrca(irca : double) : void
        + setMunicipio(municipio : String) : void
        + setNombreCuerpoAgua(nombreCuerpoAgua : String) : void
        + setTipoAgua(tipoAgua : String) : void
        + setTipoCuerpo(tipoCuerpo : String) : void
    }

  


    class DensidadPoblacional {
        + DensidadPoblacional()
        + afeccion(poblacion : int) : int
    }

  


    class LectorController {
        ~ datosIngresados : ArrayList<CuerpoDeAgua>
        - bIngresar : Button
        - bProcesar : Button
        - btPoblacion : Button
        - tfHabitantes : TextField
        - tfId : TextField
        - tfIdBusqueda : TextField
        - tfIngresos : TextArea
        - tfIrca : TextField
        - tfMunicipio : TextField
        - tfNombre : TextField
        - tfSalidas : TextArea
        - tfSalidas1 : TextField
        - tfSalidas2 : TextField
        - tfSalidas3 : TextField
        - tfTipoAgua : TextField
        - tfTipoCuerpo : TextField
        + limpiar()
        ~ AccionDensidad()
        ~ AccionIngresar()
        ~ AccionProcesar()
    }

  


    class ObjetoGeografico {
        {static} ~ cuerpo : CuerpoDeAgua[]
        {static} ~ input : Scanner = new Scanner(System.in)
        + ObjetoGeografico()
        {static} + agregarDatos() : void
        {static} + main(args : String[]) : void
        {static} + procesosDatos() : void
    }

  


    class PoblacionController {
        - btIngresar : Button
        - tfHabitantes : TextField
        - tfNivelAfectacion : TextField
        ~ AccionIngresar()
    }

  



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
